[metadata]
name = vel-red-acceso
version = attr: src.vel_red_acceso.__version__
url = https://github.com/JorgeQ95/vel-red-acceso
author = Jorge Quiceno
author_email = jequicenol@correo.udistrital.edu.co
license = MIT
license_file = LICENSE.txt
description = Programa para obtener datos de series de tiempo en la red de acceso
availability.
long_description = file: README.rst

[options]
zip_safe = True
include_package_data = True
package_dir =
	= src
packages = find:
install_requires =
	schedule ~=0.6.0
	speedtest-cli ~=2.1.0
python_requires = >=3.8.0

[options.packages.find]
where = src

; https://flake8.pycqa.org/en/stable/user/options.html
[flake8]
use-flake8-tabs = true
blank-lines-indent = never
max-doc-length = 80
max-line-length = 100
max-complexity = 10

; https://github.com/google/yapf/tree/v0.30.0#formatting-style
[yapf]
use_tabs = true
column_limit = 100
